@@ -35,21 +35,21 @@ doxygen:
 	-(srcdir=`cd ${top_srcdir}; ${PWD_COMMAND}`; \
 	  builddir=`${PWD_COMMAND}`; \
 	  ${SHELL} ${srcdir}/docs/doxygen/run_doxygen \
-	            --host_alias=$${host_alias} \
+	            --host_alias=${host_alias} \
 	            --mode=user $${srcdir} $${builddir})
 
 doxygen-maint:
 	-(srcdir=`cd ${top_srcdir}; ${PWD_COMMAND}`; \
 	  builddir=`${PWD_COMMAND}`; \
 	  ${SHELL} ${srcdir}/docs/doxygen/run_doxygen \
-	            --host_alias=$${host_alias} \
+	            --host_alias=${host_alias} \
 	            --mode=maint $${srcdir} $${builddir})
 
 doxygen-man:
 	-(srcdir=`cd ${top_srcdir}; ${PWD_COMMAND}`; \
 	  builddir=`${PWD_COMMAND}`; \
 	  ${SHELL} ${srcdir}/docs/doxygen/run_doxygen \
-	            --host_alias=$${host_alias} \
+	            --host_alias=${host_alias} \
 	            --mode=man $${srcdir} $${builddir})
 
 .PHONY: doxygen doxygen-maint doxygen-man
